сбросила браузерные отступы на главной

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<body>
 		<!--Шапка сайта-->
 		<header class="header">
+			<div class="conteiner">
 			<nav class="header-nav">
 				<a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
 
@@ -23,27 +24,32 @@
 					<li><a class="nav-link" href="">Контакты</a></li>
 				</ul>
 			</nav>
+
 			<ul class="menu-nav-cont">
 				<li><a class="nav-cont" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 				<li><a class="nav-cont" href="tel:+380961111111">+38 096 111 11 11</a></li>
 			</ul>
+		</div>
 		</header>
 
 		<!--Основной контент-->
 		<main>
 			<!--Герой-->
 			<section class="hero">
+				<div class="hero-conteiner">
 				<h1 class="hero-title">Эффективные решения <br>для вашего бизнеса</h1>
 				<button class="button" type="button">Заказать услугу</button>
+			</div>
 			</section>
 
 			<!--Особенности компании-->
 			<section class="skils-company">
+				<div class="skills-conteiner">
 				<h2 class="visually-hidden">Особенности компании</h2>
 				<ul class="skils-com-lict">
 					<li class="com-list-item">
 						<h3 class="com-item-title">Внимание к деталям</h3>
-						<p> Идейные соображения, а также начало повседневной работы по формированию позиции. </p>
+						<p class="com-item-text"> Идейные соображения, а также начало повседневной работы по формированию позиции. </p>
 					</li>
 					<li class="com-list-item">
 						<h3 class="com-item-title">Пунктуальность</h3>
@@ -58,10 +64,12 @@
 						<p class="com-item-text"> Значимость этих проблем настолько очевидна, что реализация плановых заданий. </p>
 					</li>
 				</ul>
+			</div>
 			</section>
 
 			<!--Чем мы занимаемся-->
 			<section class="work">
+				<div class="work-conteiner">
 				<h2 class="work-title">Чем мы занимаемся</h2>
 
 				<ul class="work-list">
@@ -75,10 +83,12 @@
 						<img src="./images/box3.jpg" alt="работа с планшетом" width="370" />
 					</li>
 				</ul>
+			</div>
 			</section>
 
 			<!--Наша команда-->
 			<section class="team">
+				<div class="team-conteiner">
 				<h2 class="team-title">Наша команда</h2>
 				<ul class="team-list">
 					<li class="cart-team">
@@ -105,11 +115,13 @@
 						<p lang="en" class="cart-text">UI Designer</p>
 					</li>
 				</ul>
+			</div>
 			</section>
 		</main>
 
 		<!--Футер-->
 		<footer class="footer-section">
+			<div class="footer-conteiner">
 			<a href="./index.html" class="logo"><span class="logo-web">Web</span><span class="footer-studio">Studio</span></a>
 			<address>
 				<ul class="contact-footer">
@@ -120,6 +132,7 @@
 				    <li><a class="footer-cont" href="tel:+380961111111">+38 096 111 11 11</a></li>
 				</ul>
 			</address>
+		</div>
 		</footer>
 	</body>
 </html>
