--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<main>
 			<!--Герой-->
 			<section class="hero">
-				<div class="hero-conteiner">
+				<div class="conteiner">
 				<h1 class="hero-title">Эффективные решения <br>для вашего бизнеса</h1>
 				<button class="button" type="button">Заказать услугу</button>
 			</div>
@@ -44,7 +44,7 @@
 
 			<!--Особенности компании-->
 			<section class="skils-company">
-				<div class="skills-conteiner">
+				<div class="conteiner">
 				<h2 class="visually-hidden">Особенности компании</h2>
 				<ul class="skils-com-lict">
 					<li class="com-list-item">
@@ -69,7 +69,7 @@
 
 			<!--Чем мы занимаемся-->
 			<section class="work">
-				<div class="work-conteiner">
+				<div class="conteiner">
 				<h2 class="work-title">Чем мы занимаемся</h2>
 
 				<ul class="work-list">
@@ -88,7 +88,7 @@
 
 			<!--Наша команда-->
 			<section class="team">
-				<div class="team-conteiner">
+				<div class="conteiner">
 				<h2 class="team-title">Наша команда</h2>
 				<ul class="team-list">
 					<li class="cart-team">
@@ -121,7 +121,7 @@
 
 		<!--Футер-->
 		<footer class="footer-section">
-			<div class="footer-conteiner">
+			<div class="conteiner">
 			<a href="./index.html" class="logo"><span class="logo-web">Web</span><span class="footer-studio">Studio</span></a>
 			<address>
 				<ul class="contact-footer">
