--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		<!--Футер-->
 		<footer class="footer-section">
 			<div class="conteiner">
-			<a href="./index.html" class="logo"><span class="logo-web">Web</span><span class="footer-studio">Studio</span></a>
+			<a href="./index.html" class="logo foot"><span class="logo-web">Web</span><span class="footer-studio">Studio</span></a>
 			<address>
 				<ul class="contact-footer">
 					<li>
