--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 	<body>
 		<!--Шапка сайта-->
 		<header class="header">
-			<div class="conteiner">
+			<div class="conteiner header-nav">
 			<nav class="header-nav">
 				<a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
 
 				<ul class="menu-nav">
-					<li><a class="nav-link act" href="./index.html">Студия</a></li>
-					<li><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
-					<li><a class="nav-link" href="">Контакты</a></li>
+					<li class="item"><a class="nav-link act" href="./index.html">Студия</a></li>
+					<li class="item"><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
+					<li class="item"><a class="nav-link" href="">Контакты</a></li>
 				</ul>
 			</nav>
 
 			<ul class="menu-nav-cont">
-				<li><a class="nav-cont" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li><a class="nav-cont" href="tel:+380961111111">+38 096 111 11 11</a></li>
+				<li class="item"><a class="nav-cont" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+				<li class="item"><a class="nav-cont" href="tel:+380961111111">+38 096 111 11 11</a></li>
 			</ul>
 		</div>
 		</header>
@@ -74,13 +74,13 @@
 
 				<ul class="work-list">
 					<li class="work-item">
-						<img src="./images/box1.jpg" alt="работа с компьютером" width="370" />
+						<img class="img-item" src="./images/box1.jpg" alt="работа с компьютером" width="370" />
 					</li>
 					<li class="work-item">
-						<img src="./images/box2.jpg" alt="работа с ноутбуком" width="370" />
+						<img class="img-item" src="./images/box2.jpg" alt="работа с ноутбуком" width="370" />
 					</li>
 					<li class="work-item">
-						<img src="./images/box3.jpg" alt="работа с планшетом" width="370" />
+						<img class="img-item" src="./images/box3.jpg" alt="работа с планшетом" width="370" />
 					</li>
 				</ul>
 			</div>
