--- a/index.html
+++ b/index.html
@@ -4,135 +4,154 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
+		<link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css" />
 		<link rel="stylesheet" href="./css/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"> 
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
 		<title>Официальный сайт компании WebStudio</title>
 	</head>
 	<body>
 		<!--Шапка сайта-->
 		<header class="header">
 			<div class="conteiner header-nav">
-			<nav class="header-nav">
-				<a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
+				<nav class="header-nav">
+					<a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
 
-				<ul class="menu-nav">
-					<li class="item"><a class="nav-link act" href="./index.html">Студия</a></li>
-					<li class="item"><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
-					<li class="item"><a class="nav-link" href="">Контакты</a></li>
+					<ul class="menu-nav">
+						<li class="item"><a class="nav-link act" href="./index.html">Студия</a></li>
+						<li class="item"><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
+						<li class="item"><a class="nav-link" href="">Контакты</a></li>
+					</ul>
+				</nav>
+
+				<ul class="menu-nav-cont">
+					<li class="item"><a class="nav-cont" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+					<li class="item"><a class="nav-cont" href="tel:+380961111111">+38 096 111 11 11</a></li>
 				</ul>
-			</nav>
-
-			<ul class="menu-nav-cont">
-				<li class="item"><a class="nav-cont" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li class="item"><a class="nav-cont" href="tel:+380961111111">+38 096 111 11 11</a></li>
-			</ul>
-		</div>
+			</div>
 		</header>
 
 		<!--Основной контент-->
 		<main>
 			<!--Герой-->
 			<section class="hero">
-				<div class="conteiner">
-				<h1 class="hero-title">Эффективные решения <br>для вашего бизнеса</h1>
-				<button class="button" type="button">Заказать услугу</button>
-			</div>
+				<div class="conteiner hero-content">
+					<h1 class="hero-title">Эффективные решения <br />для вашего бизнеса</h1>
+					<button class="button" type="button">Заказать услугу</button>
+				</div>
 			</section>
 
 			<!--Особенности компании-->
 			<section class="skils-company">
 				<div class="conteiner">
-				<h2 class="visually-hidden">Особенности компании</h2>
-				<ul class="skils-com-lict">
-					<li class="com-list-item">
-						<h3 class="com-item-title">Внимание к деталям</h3>
-						<p class="com-item-text"> Идейные соображения, а также начало повседневной работы по формированию позиции. </p>
-					</li>
-					<li class="com-list-item">
-						<h3 class="com-item-title">Пунктуальность</h3>
-						<p class="com-item-text"> Задача организации, в особенности же рамки и место обучения кадров влечет за собой. </p>
-					</li>
-					<li class="com-list-item">
-						<h3 class="com-item-title">Планирование</h3>
-						<p class="com-item-text"> Равным образом консультация с широким активом в значительной степени обуславливает. </p>
-					</li>
-					<li class="com-list-item">
-						<h3 class="com-item-title">Современные технологии</h3>
-						<p class="com-item-text"> Значимость этих проблем настолько очевидна, что реализация плановых заданий. </p>
-					</li>
-				</ul>
-			</div>
+					<h2 class="visually-hidden">Особенности компании</h2>
+					<ul class="skils-com-lict">
+						<li class="com-list-item">
+							<h3 class="com-item-title">Внимание к деталям</h3>
+							<p class="com-item-text">
+								Идейные соображения, а также начало повседневной работы по формированию позиции.
+							</p>
+						</li>
+						<li class="com-list-item">
+							<h3 class="com-item-title">Пунктуальность</h3>
+							<p class="com-item-text">
+								Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+							</p>
+						</li>
+						<li class="com-list-item">
+							<h3 class="com-item-title">Планирование</h3>
+							<p class="com-item-text">
+								Равным образом консультация с широким активом в значительной степени обуславливает.
+							</p>
+						</li>
+						<li class="com-list-item">
+							<h3 class="com-item-title">Современные технологии</h3>
+							<p class="com-item-text">
+								Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+							</p>
+						</li>
+					</ul>
+				</div>
 			</section>
 
 			<!--Чем мы занимаемся-->
 			<section class="work">
 				<div class="conteiner">
-				<h2 class="work-title">Чем мы занимаемся</h2>
+					<h2 class="work-title">Чем мы занимаемся</h2>
 
-				<ul class="work-list">
-					<li class="work-item">
-						<img class="img-item" src="./images/box1.jpg" alt="работа с компьютером" width="370" />
-					</li>
-					<li class="work-item">
-						<img class="img-item" src="./images/box2.jpg" alt="работа с ноутбуком" width="370" />
-					</li>
-					<li class="work-item">
-						<img class="img-item" src="./images/box3.jpg" alt="работа с планшетом" width="370" />
-					</li>
-				</ul>
-			</div>
+					<ul class="work-list">
+						<li class="work-item">
+							<imgsrc="./images/box1.jpg" alt="работа с компьютером" width="370" />
+						</li>
+						<li class="work-item">
+							<img src="./images/box2.jpg" alt="работа с ноутбуком" width="370" />
+						</li>
+						<li class="work-item">
+							<img src="./images/box3.jpg" alt="работа с планшетом" width="370" />
+						</li>
+					</ul>
+				</div>
 			</section>
 
 			<!--Наша команда-->
 			<section class="team">
 				<div class="conteiner">
-				<h2 class="team-title">Наша команда</h2>
-				<ul class="team-list">
-					<li class="cart-team">
-						<img src="./images/img1.jpg" alt="Игорь Демьяненко" width="270" />
-						<h3 class="cart-title">Игорь Демьяненко</h3>
-						<p lang="en" class="cart-text">Product Designer</p>
-					</li>
+					<h2 class="team-title">Наша команда</h2>
+					<ul class="team-list">
+						<li class="cart-team">
+							<img src="./images/img1.jpg" alt="Игорь Демьяненко" width="270" />
+							<h3 class="cart-title">Игорь Демьяненко</h3>
+							<p lang="en" class="cart-text">Product Designer</p>
+						</li>
 
-					<li class="cart-team">
-						<img src="./images/img2.jpg" alt="Ольга Репина" width="270" />
-						<h3 class="cart-title">Ольга Репина</h3>
-						<p lang="en" class="cart-text">Frontend Developer</p>
-					</li>
+						<li class="cart-team">
+							<img src="./images/img2.jpg" alt="Ольга Репина" width="270" />
+							<h3 class="cart-title">Ольга Репина</h3>
+							<p lang="en" class="cart-text">Frontend Developer</p>
+						</li>
 
-					<li class="cart-team">
-						<img src="./images/img3.jpg" alt="Николай Тарасов" width="270" />
-						<h3 class="cart-title">Николай Тарасов</h3>
-						<p lang="en" class="cart-text">Marketing</p>
-					</li>
+						<li class="cart-team">
+							<img src="./images/img3.jpg" alt="Николай Тарасов" width="270" />
+							<h3 class="cart-title">Николай Тарасов</h3>
+							<p lang="en" class="cart-text">Marketing</p>
+						</li>
 
-					<li class="cart-team">
-						<img src="./images/img4.jpg" alt="Михаил Ермаков" width="270" />
-						<h3 class="cart-title">Михаил Ермаков</h3>
-						<p lang="en" class="cart-text">UI Designer</p>
-					</li>
-				</ul>
-			</div>
+						<li class="cart-team">
+							<img src="./images/img4.jpg" alt="Михаил Ермаков" width="270" />
+							<h3 class="cart-title">Михаил Ермаков</h3>
+							<p lang="en" class="cart-text">UI Designer</p>
+						</li>
+					</ul>
+				</div>
 			</section>
 		</main>
 
 		<!--Футер-->
 		<footer class="footer-section">
-			<div class="conteiner">
-			<a href="./index.html" class="logo foot"><span class="logo-web">Web</span><span class="footer-studio">Studio</span></a>
-			<address>
-				<ul class="contact-footer">
-					<li>
-						<a class="address" href="https://goo.gl/maps/L429s9yHfbcvS6HbA" target="_blank" rel="noopener noreferrer nofollow">г. Киев, пр-т Леси Украинки, 26</a>
-					</li>
-					<li><a class="footer-cont" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				    <li><a class="footer-cont" href="tel:+380961111111">+38 096 111 11 11</a></li>
-				</ul>
-			</address>
-		</div>
+			<div class="conteiner footer-content">
+				<a href="./index.html" class="logo foot"
+					><span class="logo-web">Web</span><span class="footer-studio">Studio</span></a
+				>
+				<address>
+					<ul class="contact-footer">
+						<li>
+							<a
+								class="address"
+								href="https://goo.gl/maps/L429s9yHfbcvS6HbA"
+								target="_blank"
+								rel="noopener noreferrer nofollow"
+								>г. Киев, пр-т Леси Украинки, 26</a
+							>
+						</li>
+						<li><a class="footer-cont" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+						<li><a class="footer-cont" href="tel:+380961111111">+38 096 111 11 11</a></li>
+					</ul>
+				</address>
+			</div>
 		</footer>
 	</body>
 </html>
