--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,8 @@
 				<a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
 
 				<ul class="menu-nav">
-					<li class="item"><a class="nav-link act" href="./index.html">Студия</a></li>
-					<li class="item"><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
+					<li class="item"><a class="nav-link" href="./index.html">Студия</a></li>
+					<li class="item"><a class="nav-link act" href="./portfolio.html">Портфолио</a></li>
 					<li class="item"><a class="nav-link" href="">Контакты</a></li>
 				</ul>
 			</nav>
@@ -38,6 +38,7 @@
       <h1 class="visually-hidden">Портфолио наших работ</h1>
       <!--Меню портфолио-->
       <section class="menu-btn">
+        <div class="conteiner">
         <ul class="menu-btn-list">
           <li><button type="button" class="filtre">Все</button></li>
           <li><button type="button" class="filtre">Веб-сайты</button></li>
@@ -104,11 +105,12 @@
           </a>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <!--Футер-->
 		<footer class="footer-section">
-			<div class="conteiner">
+			<div class="conteiner footer-content">
 			<a href="./index.html" class="logo foot"><span class="logo-web">Web</span><span class="footer-studio">Studio</span></a>
 			<address>
 				<ul class="contact-footer">
