--- a/index.html
+++ b/index.html
@@ -47,28 +47,28 @@
 
 			<!--Особенности компании-->
 			<section class="skils-company">
-				<div class="conteiner">
+				<div class="conteiner skils-content">
 					<h2 class="visually-hidden">Особенности компании</h2>
 					<ul class="skils-com-lict">
-						<li class="com-list-item">
+						<li class="com-list-item item">
 							<h3 class="com-item-title">Внимание к деталям</h3>
 							<p class="com-item-text">
 								Идейные соображения, а также начало повседневной работы по формированию позиции.
 							</p>
 						</li>
-						<li class="com-list-item">
+						<li class="com-list-item item">
 							<h3 class="com-item-title">Пунктуальность</h3>
 							<p class="com-item-text">
 								Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
 							</p>
 						</li>
-						<li class="com-list-item">
+						<li class="com-list-item item">
 							<h3 class="com-item-title">Планирование</h3>
 							<p class="com-item-text">
 								Равным образом консультация с широким активом в значительной степени обуславливает.
 							</p>
 						</li>
-						<li class="com-list-item">
+						<li class="com-list-item item">
 							<h3 class="com-item-title">Современные технологии</h3>
 							<p class="com-item-text">
 								Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -80,17 +80,17 @@
 
 			<!--Чем мы занимаемся-->
 			<section class="work">
-				<div class="conteiner">
+				<div class="conteiner work-content">
 					<h2 class="work-title">Чем мы занимаемся</h2>
 
 					<ul class="work-list">
-						<li class="work-item">
-							<imgsrc="./images/box1.jpg" alt="работа с компьютером" width="370" />
+						<li class="item">
+							<img src="./images/box1.jpg" alt="работа с компьютером" width="370" />
 						</li>
-						<li class="work-item">
+						<li class="item">
 							<img src="./images/box2.jpg" alt="работа с ноутбуком" width="370" />
 						</li>
-						<li class="work-item">
+						<li class="item">
 							<img src="./images/box3.jpg" alt="работа с планшетом" width="370" />
 						</li>
 					</ul>
@@ -99,29 +99,29 @@
 
 			<!--Наша команда-->
 			<section class="team">
-				<div class="conteiner">
+				<div class="conteiner team-content">
 					<h2 class="team-title">Наша команда</h2>
 					<ul class="team-list">
 						<li class="cart-team">
-							<img src="./images/img1.jpg" alt="Игорь Демьяненко" width="270" />
+							<img class="team-img" src="./images/img1.jpg" alt="Игорь Демьяненко" width="270" />
 							<h3 class="cart-title">Игорь Демьяненко</h3>
 							<p lang="en" class="cart-text">Product Designer</p>
 						</li>
 
 						<li class="cart-team">
-							<img src="./images/img2.jpg" alt="Ольга Репина" width="270" />
+							<img class="team-img" src="./images/img2.jpg" alt="Ольга Репина" width="270" />
 							<h3 class="cart-title">Ольга Репина</h3>
 							<p lang="en" class="cart-text">Frontend Developer</p>
 						</li>
 
 						<li class="cart-team">
-							<img src="./images/img3.jpg" alt="Николай Тарасов" width="270" />
+							<img class="team-img" src="./images/img3.jpg" alt="Николай Тарасов" width="270" />
 							<h3 class="cart-title">Николай Тарасов</h3>
 							<p lang="en" class="cart-text">Marketing</p>
 						</li>
 
 						<li class="cart-team">
-							<img src="./images/img4.jpg" alt="Михаил Ермаков" width="270" />
+							<img class="team-img" src="./images/img4.jpg" alt="Михаил Ермаков" width="270" />
 							<h3 class="cart-title">Михаил Ермаков</h3>
 							<p lang="en" class="cart-text">UI Designer</p>
 						</li>
