--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			</section>
 
 			<!--Наша команда-->
-			<section class="team">
+			<section class="section team">
 				<div class="conteiner team-content">
 					<h2 class="team-title">Наша команда</h2>
 					<ul class="team-list">
