--- a/portfolio.html
+++ b/portfolio.html
@@ -38,70 +38,98 @@
       <h1 class="visually-hidden">Портфолио наших работ</h1>
       <!--Меню портфолио-->
       <section class="menu-btn">
-        <div class="conteiner">
+        <div class="conteiner portfolio-conent">
         <ul class="menu-btn-list">
-          <li><button type="button" class="filtre">Все</button></li>
-          <li><button type="button" class="filtre">Веб-сайты</button></li>
-          <li><button type="button" class="filtre">Приложения</button></li>
-          <li><button type="button" class="filtre">Дизайн</button></li>
-          <li><button type="button" class="filtre">Маркетинг</button></li>
+          <li class="item"><button type="button" class="filtre">Все</button></li>
+          <li class="item"><button type="button" class="filtre">Веб-сайты</button></li>
+          <li class="item"><button type="button" class="filtre">Приложения</button></li>
+          <li class="item"><button type="button" class="filtre">Дизайн</button></li>
+          <li class="item"><button type="button" class="filtre">Маркетинг</button></li>
         </ul>
 
         <!--Портфолио-->
 
-        <ul>
+        <ul class="portfolio">
           <li class="portfolio-cart">
-            <a href="" target="_blank" class="cart-link"><img src="./images/1img.jpg" alt="" />
-            <h2 class="portfolio-title">Технокряк</h2>
+            <a href="" target="_blank" class="cart-link">
+              <img width="370px" class="img-portfolio" src="./images/1img.jpg" alt="" />
+            <div class="item-div">
+              <h2 class="portfolio-title">Технокряк</h2>
             <p class="portfolio-text">Веб-сайт</p>
+          </div>
           </a>
           </li>
           <li class="portfolio-cart">
-            <a href="" target="_blank" class="cart-link"><img src="./images/2img.jpg" alt="" />
+            <a href="" target="_blank" class="cart-link">
+              <img width="370px"  class="img-portfolio" src="./images/2img.jpg" alt="" />
+              <div class="item-div">
             <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
             <p class="portfolio-text">Дизайн</p>
+          </div>
           </a>
+        
           </li>
           <li class="portfolio-cart">
-            <a href="" target="_blank" class="cart-link"><img src="./images/3img.jpg" alt="" />
+            <a href="" target="_blank" class="cart-link">
+              <img width="370px"  class="img-portfolio" src="./images/3img.jpg" alt="" />
+              <div class="item-div">
             <h2 class="portfolio-title">Ресторан Seafood</h2>
             <p class="portfolio-text">Приложение</p>
+          </div>
           </a>
           </li>
           <li class="portfolio-cart">
-            <a href="" target="_blank" class="cart-link"><img src="./images/4img.jpg" alt="" />
+            <a href="" target="_blank" class="cart-link">
+              <img width="370px"  class="img-portfolio" src="./images/4img.jpg" alt="" />
+              <div class="item-div">
             <h2 class="portfolio-title">Проект Prime</h2>
             <p class="portfolio-text">Маркетинг</p>
+          </div>
           </a>
           </li>
           <li class="portfolio-cart">
-            <a href="" target="_blank" class="cart-link"><img src="./images/5img.jpg" alt="" />
+            <a href="" target="_blank" class="cart-link">
+              <img width="370px"  class="img-portfolio" src="./images/5img.jpg" alt="" />
+              <div class="item-div">
             <h2 class="portfolio-title">Проект Boxes</h2>
             <p class="portfolio-text">Приложение</p>
+          </div>
           </a>
           </li>
           <li class="portfolio-cart">
-            <a href="" target="_blank" class="cart-link"><img src="./images/6img.jpg" alt="" />
+            <a href="" target="_blank" class="cart-link">
+              <img width="370px"  class="img-portfolio" src="./images/6img.jpg" alt="" />
+              <div class="item-div">
             <h2 class="portfolio-title">Inspiration has no Borders</h2>
             <p class="portfolio-text">Веб-сайт</p>
+          </div>
           </a>
           </li>
           <li class="portfolio-cart">
-            <a href="" target="_blank" class="cart-link"><img src="./images/7img.jpg" alt="" />
+            <a href="" target="_blank" class="cart-link">
+              <img width="370px"  class="img-portfolio" src="./images/7img.jpg" alt="" />
+              <div class="item-div">
             <h2 class="portfolio-title">Издание Limited Edition</h2>
             <p class="portfolio-text">Дизайн</p>
+          </div>
           </a>
           </li>
           <li class="portfolio-cart">
-            <a href="" target="_blank" class="cart-link"><img src="./images/8img.jpg" alt="" />
+            <a href="" target="_blank" class="cart-link">
+              <img width="370px"  class="img-portfolio" src="./images/8img.jpg" alt="" />
+              <div class="item-div">
             <h2 class="portfolio-title">Проект LAB</h2>
             <p class="portfolio-text">Маркетинг</p>
+          </div>
           </a>
           </li>
           <li class="portfolio-cart">
-            <a href="" target="_blank" class="cart-link"><img src="./images/9img.jpg" alt="" />
+            <a href="" target="_blank" class="cart-link">
+              <img width="370px"  class="img-portfolio" src="./images/9img.jpg" alt="" />
+              <div class="item-div">
             <h2 class="portfolio-title">Growing Business</h2>
             <p class="portfolio-text">Приложение</p>
+          </div>
           </a>
           </li>
         </ul>
