--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 			</section>
 
 			<!--Особенности компании-->
-			<section class="skils-company">
-				<div class="conteiner skils-content">
+			<section class="section">
+				<div class="conteiner">
 					<h2 class="visually-hidden">Особенности компании</h2>
 					<ul class="skils-com-lict">
 						<li class="com-list-item item">
@@ -79,8 +79,8 @@
 			</section>
 
 			<!--Чем мы занимаемся-->
-			<section class="work">
-				<div class="conteiner work-content">
+			<section class="section">
+				<div class="conteiner">
 					<h2 class="work-title">Чем мы занимаемся</h2>
 
 					<ul class="work-list">
