--- a/portfolio.html
+++ b/portfolio.html
@@ -37,8 +37,8 @@
 
       <h1 class="visually-hidden">Портфолио наших работ</h1>
       <!--Меню портфолио-->
-      <section class="menu-btn">
-        <div class="conteiner portfolio-conent">
+      <section class="section menu-btn">
+        <div class="conteiner">
         <ul class="menu-btn-list">
           <li class="item"><button type="button" class="filtre">Все</button></li>
           <li class="item"><button type="button" class="filtre">Веб-сайты</button></li>
