--- a/portfolio.html
+++ b/portfolio.html
@@ -140,21 +140,20 @@
 		<!--Футер-->
 		<footer class="footer-section">
 			<div class="conteiner footer-content">
-				<a href="./index.html" class="logo foot">
-          <span class="logo-web">Web</span><span class="footer-studio">Studio</span></a>
+				<a href="./index.html" class="logo foot"
+					><span class="logo-web">Web</span><span class="footer-studio">Studio</span></a>
 				<address>
 					<ul class="contact-footer">
-						<li>
+						<li class="item-foot">
 							<a
 								class="address"
 								href="https://goo.gl/maps/L429s9yHfbcvS6HbA"
 								target="_blank"
 								rel="noopener noreferrer nofollow"
-								>г. Киев, пр-т Леси Украинки, 26</a
-							>
+								>г. Киев, пр-т Леси Украинки, 26</a>
 						</li>
-						<li><a class="footer-cont" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-						<li><a class="footer-cont" href="tel:+380961111111">+38 096 111 11 11</a></li>
+						<li class="item-foot"><a class="footer-cont" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+						<li class="item-foot"><a class="footer-cont" href="tel:+380961111111">+38 096 111 11 11</a></li>
 					</ul>
 				</address>
 			</div>
